virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "t5.amjedsaleel.tech"
  gateways:
  - sample-gateway
  http:
    - route:
      - destination:
          host: dj-hello-service # service name
          subset: v1
        weight: 50
      - destination:
          host: dj-hello-service # service name
          subset: v2
        weight: 50
